Lab2: Correct typos

--- a/2-System-of-linear-equations/slae.ipynb
+++ b/2-System-of-linear-equations/slae.ipynb
@@ -31,7 +31,7 @@
     "The discrepancy increases which shows that the Jacobi method for this\n",
     "matrix do not converges.  \n",
     "This is also follows from the criteria of convergence of Jacobi method:\n",
-    "|$\\lambda_{i}| < 1$, $i=\\overline{1,21}$\n",
+    "|$\\lambda_{i}| < 1$, $i=\\overline{1,n}$\n",
     "\n",
     "Seidel method:\n",
     "![discrepancy_sei](attachment:./assets/discrepancy_sei.png)\n",
