Lab3: Fix incorrect plot for Newton's method

--- a/3-System-of-nonlinear-equations/snae.ipynb
+++ b/3-System-of-nonlinear-equations/snae.ipynb
@@ -74,10 +74,8 @@
     "        2 & -\\cos{(x_k + 1)} \\\\\n",
     "    \\end{bmatrix}\n",
     "$$\n",
-    "<figure>\n",
-    "<img src=\"attachment:./sys_newton_conv.png\" alt=\"sys_newton_conv\" />\n",
-    "<figcaption aria-hidden=\"true\">sys_newton_conv</figcaption>\n",
-    "</figure>"
+    "![sys_newton_conv](attachment:./sys_newton_conv.png)\n",
+    "\n"
    ],
    "attachments": {
     "./eq_converge.png": {
